[tool.poetry]
name = "xdist-test"
version = "0.1.0"
description = ""
authors = ["Ayal Regev <ayal@redefine.dev>"]
readme = "README.md"
packages = [{include = "xdist_test"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.1.0"
ipdb = "^0.13.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
